AGIC_LAD/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fouadtesting
  labels:
    name: fouadtesting
    environment: dev
