AGIC_LAD/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: fouadtesting
  labels:
    app: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
