AGIC_LAD/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: fouadtesting
  labels:
    app: app2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
