AGIC_LAD/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: fouadtesting
  labels:
    app: app3
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
